<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/padding_8">

        <CheckBox
            android:id="@+id/list_filter_check"
            android:layout_width="@dimen/size_0"
            android:layout_height="wrap_content"
            style="@style/FilterCheckBoxStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/list_filter_info" />

        <ImageButton
            android:id="@+id/list_filter_info"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_0"
            android:src="@drawable/ic_info"
...
            app:layout_constraintTop_toTopOf="@+id/list_filter_check"
            app:layout_constraintBottom_toBottomOf="@+id/list_filter_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/list_filter_check" />

        <com.tarasovvp.smartblocker.utils.EmptyStateView
            android:id="@+id/list_filter_empty"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_0"
            android:layout_marginHorizontal="@dimen/margin_16"
            app:layout_constraintTop_toBottomOf="@+id/list_filter_check"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_condition_full"
            android:text="@string/filter_condition_full"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/margin_10"
            app:layout_constraintBottom_toTopOf="@+id/fab_start"
            app:layout_constraintEnd_toEndOf="@+id/fab_start" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_condition_start"
            android:text="@string/filter_condition_start"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/margin_10"
            app:layout_constraintBottom_toTopOf="@+id/fab_contain"
            app:layout_constraintEnd_toEndOf="@+id/fab_contain" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_contain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_condition_contain"
            android:text="@string/filter_condition_contain"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/margin_10"
            app:layout_constraintBottom_toTopOf="@+id/fab_new"
            app:layout_constraintEnd_toEndOf="@+id/fab_new" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:src="@drawable/ic_create"
            android:contentDescription="@string/creating_filter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/list_filter_refresh"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_0"
            android:layout_marginHorizontal="@dimen/margin_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_filter_check">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_filter_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/padding_8"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                tools:listitem="@layout/item_filter" />
...
