...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_8"
            android:paddingVertical="@dimen/padding_16">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/item_filter_avatar"
                android:layout_width="@dimen/margin_50"
                android:layout_height="@dimen/margin_50"
                android:background="@color/avatar_bg"
                android:scaleType="center"
                app:imageResource="@{filterWithFilteredNumberUIModel.conditionTypeIcon}"
                app:layout_constraintBottom_toBottomOf="@+id/item_filter_name"
                app:layout_constraintEnd_toStartOf="@+id/item_filter_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/item_filter_value"
                app:shapeAppearanceOverlay="@style/RoundedImageViewStyle" />

            <ImageView
                android:id="@+id/item_filter_filter"
                android:layout_width="@dimen/margin_20"
                android:layout_height="@dimen/margin_20"
                app:imageResource="@{filterWithFilteredNumberUIModel.filterTypeIcon}"
                app:layout_constraintBottom_toBottomOf="@+id/item_filter_avatar"
                app:layout_constraintEnd_toEndOf="@+id/item_filter_avatar" />

...
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{filterWithFilteredNumberUIModel.highlightedSpanned}"
                app:layout_constraintBottom_toTopOf="@+id/item_filter_name"
                app:layout_constraintEnd_toStartOf="@+id/item_filter_delete"
                app:layout_constraintStart_toEndOf="@+id/item_filter_avatar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_filter_name"
                android:layout_width="@dimen/size_0"
...
            <CheckBox
                android:id="@+id/item_filter_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{filterWithFilteredNumberUIModel.checkedForDelete}"
                android:visibility="@{filterWithFilteredNumberUIModel.deleteMode ? View.VISIBLE : View.GONE, default=gone}"
                app:layout_constraintBottom_toTopOf="@+id/item_filter_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/item_filter_divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_1"
                android:background="@color/light_steel_blue"
                android:layout_marginTop="@dimen/margin_8"
                app:layout_constraintTop_toBottomOf="@+id/item_filter_name" />

            <TextView
                android:id="@+id/item_filter_contacts"
                android:layout_width="@dimen/size_0"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginTop="@dimen/margin_5"
                android:textSize="@dimen/text_size_10"
                android:textColor="@{ContextCompat.getColor(context, filterWithFilteredNumberUIModel.filterTypeTint)}"
                android:text="@{filterWithFilteredNumberUIModel.filteredNumbersText(context)}"
                app:layout_constraintTop_toBottomOf="@+id/item_filter_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/item_filter_created" />

            <TextView
                android:id="@+id/item_filter_created"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_0"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="@dimen/text_size_10"
                android:textColor="@color/text_color_grey"
                android:text="@{String.format(@string/filter_action_created, filterWithFilteredNumberUIModel.filterCreatedDate)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_filter_contacts"
                app:layout_constraintTop_toTopOf="@+id/item_filter_contacts"
                app:layout_constraintBottom_toBottomOf="@+id/item_filter_contacts" />

        </androidx.constraintlayout.widget.ConstraintLayout>
...
