...
    <fragment
        android:id="@+id/listBlockerFragment"
        android:name="com.tarasovvp.smartblocker.presentation.main.number.list.listfilter.ListBlockerFragment"
        android:label="@string/list_blocker">
        <action
            android:id="@+id/startCreateFilterFragment"
            app:destination="@id/createFilterFragment" />
        <action
            android:id="@+id/startDetailsFilterFragment"
            app:destination="@id/detailsFilterFragment" />
        <action
            android:id="@+id/startNumberDataFilteringDialog"
            app:destination="@id/numberDataFilteringDialog" />
        <action
            android:id="@+id/startFilterActionDialog"
            app:destination="@id/filterActionDialog" />
        <action
            android:id="@+id/startInfoFragment"
            app:destination="@id/infoFragment" />
    </fragment>

    <fragment
        android:id="@+id/listPermissionFragment"
        android:name="com.tarasovvp.smartblocker.presentation.main.number.list.listfilter.ListPermissionFragment"
        android:label="@string/list_permission">
...
